--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <!-- non-text-control-contrast rule violation-->
         <label for="low-contrast-input">Low Contrast Input:</label>
-        <input id="low-contrast-input" type="text" style="margin: 10px 0 10px 0; padding: 10px; border: hidden; color: #969d9f;" placeholder="Type here" autocomplete="off">
+        <input id="low-contrast-input" style="margin: 10px 0 10px 0; padding: 10px; border: hidden;" placeholder="Type here" autocomplete="off">
         <br><br>
     </main>
     </body>
