--- a/index.html
+++ b/index.html
@@ -1,29 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NonTextControlContrast</title>
-    <style>
-
-         input {
-                border: 5px solid #e5e5e5;
-                outline: none;
-                border: 5px solid #e5e5e5;
-                outline: none;
-            }
-
-    </style>
+  <meta charset="UTF-8">
+  <title>Redirecting...</title>
+  <meta http-equiv="refresh" content="0;url=page1.html">
 </head>
-
 <body>
-
-    <!-- Violation Cases -->
-       <label for="_inputElement">Non text input element</label>
-        <input id="_inputElement" type="text" name="q" value="" style="margin: 10px 0 10px 0; padding: 10px; border: hidden; color: #969d9f;" aria-label="Enter Keyword or Item No." autocomplete="off"><label for="_inputElement">Non text input element</label>
-        <input id="_inputElement" type="text" name="q" value="" style="margin: 10px 0 10px 0; padding: 10px; border: hidden; color: #969d9f;" aria-label="Enter Keyword or Item No." autocomplete="off">
-
+  <p>Redirecting to Page 1...</p>
 </body>
-
 </html>
