--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Redirecting...</title>
-  <meta http-equiv="refresh" content="0;url=page1.html">
+  <title>Home</title>
+  <script>
+    // Redirect to login-signup page on load
+    window.onload = function() {
+      window.location.href = "https://mattscepter.github.io/testWebsite/page11.html";
+    };
+  </script>
 </head>
 <body>
-  <p>Redirecting to Page 1...</p>
+  <p>Redirecting to Login/Signup page...</p>
 </body>
 </html>
