--- a/profile.html
+++ b/profile.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Final Page</title>
+  <title>Profile</title>
 </head>
 <body>
-  <h1>You have reached the final page!</h1>
+  <h1>Welcome to your Profile Page!</h1>
 </body>
 </html>
