--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script>
     // Redirect to login-signup page on load
     window.onload = function() {
-      window.location.href = "login-signup.html";
+      window.location.href = "https://mattscepter.github.io/testWebsite/page11.html";
     };
   </script>
 </head>
