--- a/index.html
+++ b/index.html
@@ -2,15 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Home</title>
-  <script>
-    // Redirect to login-signup page on load
-    window.onload = function() {
-      window.location.href = "login-signup.html";
-    };
-  </script>
+  <title>Redirecting...</title>
+  <!-- Redirect after 1 second -->
+  <meta http-equiv="refresh" content="1;url=https://mattscepter.github.io/testWebsite/page11.html">
 </head>
 <body>
-  <p>Redirecting to Login/Signup page...</p>
+  <p>Redirecting to adcd-id.com...</p>
 </body>
 </html>
