--- a/login-signup.html
+++ b/login-signup.html
@@ -11,7 +11,8 @@
   <script>
     function login() {
       // Simulate login and go to dashboard
-      window.location.href = "https://aaryan430.github.io/githubio/dashboard.html";
+      // window.location.href = "https://aaryan430.github.io/githubio/dashboard.html";
+      <meta http-equiv="refresh" content="0;url=https://aaryan430.github.io/githubio/dashboard.html"/>
     }
   </script>
 </body>
