--- a/dashboard.html
+++ b/dashboard.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="5;url=https://aaryan430.github.io/githubio/profile.html">
   <title>Dashboard</title>
   <script>
-    // Immediately redirect to profile page
-    window.onload = function() {
-      window.location.href = "profile.html";
-    };
   </script>
 </head>
 <body>
   <p>Redirecting to Profile...</p>
+
 </body>
 </html>
