--- a/profile.html
+++ b/profile.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta http-equiv="refresh" content="5;url=https://aaryan430.github.io/githubio/logout.html">
   <title>Profile</title>
+  <script>
+  </script>
 </head>
 <body>
-  <h1>Welcome to your Profile Page!</h1>
+  <p>Redirecting to Logout...</p>
+
 </body>
 </html>
